src/components/canvas/Canvas.module.css
.canvas {
  width: 50rem;
  height: 40rem;
  background-color: black;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px var(--purple);
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
  padding: 0.5rem;
  overflow: hidden;
}

.mainText {
  z-index: 10;
  position: relative;
  /* font-size: clamp(0.6rem, 1.5vw, 1rem); */
  /* white-space: normal; */
  /* word-wrap: break-word; */
  text-align: center;
  font-family: "Arial Black";
  color: white;
  width: 100%;
  height: 100%;
  padding: 1rem 0rem;
}

.ghostText {
  z-index: 0;
  position: absolute;
  /* font-size: clamp(0.6rem, 1.5vw, 1rem); */
  /* white-space: normal; */
  /* word-wrap: break-word; */
  text-align: center;
  font-family: "Arial Black";
  color: white;
  width: 100%;
  height: 100%;
  inset: 0;
  opacity: 0.5;
  filter: blur(0.5rem);
  padding: 1rem 0rem;
}
.mainShadow {
  position: absolute;
}

.bgImg {
  width: 100%;
  height: 100%;
  inset: 0;
  position: absolute;
  z-index: 0;
  opacity: 0.2;
}

.backgroundLightning {
  position: absolute;
  width: 9rem;
  bottom: 1rem;
  z-index: 100;
  right: 0rem;
  color: rgb(187, 187, 187);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 0.2rem;
  font-size: 14px;
}

.endPrice {
  position: absolute;
  right: 0.5rem;
  top: 1rem;
  color: white;
  z-index: 100;
  font-weight: bold;
  display: flex;
  flex-direction: column;
  width: 155px;
}
.endPrice span:nth-child(1) {
  font-size: 24px;
}

.innerColWrap {
  height: 100%;
  z-index: 30;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.displacer {
  position: relative;
  left: 0.5rem;
  bottom: 0.5rem;
}

.backdrop {
  backdrop-filter: blur(2rem);
  background-color: rgba(43, 43, 43, 0.65);
  border-radius: 1rem;
}

.displayerBox {
  position: absolute;
  width: 100%;
  height: 100%;

  z-index: 10;
  inset: 0;
}

.topleft {
  width: 1rem;
  height: 7px;
  background-color: rgb(129, 129, 129);
  z-index: 1000;
  position: absolute;
  border-radius: 1rem;
  transform: rotate(-35deg);
}

.bottomleft {
  width: 1rem;
  height: 7px;
  background-color: rgb(142, 142, 142);
  z-index: 1000;
  position: absolute;
  border-radius: 1rem;
  transform: rotate(-50deg);
  bottom: 0.2rem;
  left: 0.15rem;
}
.topRight {
  width: 1rem;
  height: 7px;
  background-color: rgb(232, 232, 232);
  z-index: 1000;
  position: absolute;
  border-radius: 1rem;
  transform: rotate(-35deg);
  right: -0.2rem;
  top: -0.15rem;
}
.bottomRight {
  width: 1rem;
  height: 7px;
  background-color: rgb(155, 155, 155);
  z-index: 1000;
  position: absolute;
  border-radius: 1rem;
  transform: rotate(-40deg);
  right: -0.3rem;
  bottom: 0.35rem;
}

.rgb {
  animation: rgbCycle 4s infinite;
}

.textWrap {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  overflow: hidden;
  margin-bottom: -2rem;
}

@keyframes rgbCycle {
  0% {
    color: red;
    text-shadow: 0px 0px 20px red;
  }
  16.67% {
    color: orange;
    text-shadow: 0px 0px 20px orange;
  }
  33.33% {
    color: yellow;
    text-shadow: 0px 0px 20px yellow;
  }
  50% {
    color: green;
    text-shadow: 0px 0px 20px green;
  }
  66.67% {
    color: cyan;
    text-shadow: 0px 0px 20px cyan;
  }
  83.33% {
    color: magenta;
    text-shadow: 0px 0px 20px magenta;
  }
  100% {
    color: red;
    text-shadow: 0px 0px 20px red;
  }
}

.outline {
  color: transparent !important;
  -webkit-text-stroke-width: 1px;
  transition: all 0.1s ease-in-out;
}

@media only screen and (max-width: 1000px) {
  .canvas {
    width: 100%;
  }
}
@media only screen and (max-width: 800px) {
}

@media only screen and (max-width: 500px) {
  .canvas {
    height: 25rem;
    padding: 0.25rem;
  }
  .endPrice {
    width: 140px;
    right: -0.25rem;
  }
  .innerColWrap {
    /* width: 100%; */
    left: 0%;
  }
  .outline {
    -webkit-text-stroke-width: 0.5px;
  }
  .textWrap {
    /* background-color: red; */
    position: relative;
  }
  .endPrice {
    left: 1rem;
    bottom: 1rem;
    justify-content: flex-end;
  }
  .backgroundLightning {
    gap: 0;
  }
}

